--- a/_posts/thesis_chapters/2025-6-6-Gdps_v4.md
+++ b/_posts/thesis_chapters/2025-6-6-Gdps_v4.md
@@ -720,7 +720,7 @@ The purpose of structuring the ways in which participants around the MDA typolog
 
 The examples above give an overview of how participant's tacit knowledge of games and GDPs in particular can be brought into the game making community and used within diverse roles explored in section above, including: providing peer feedback, ideation, and aiding division of labour [@wenger_communities_1998].
 
-To start the process of discussing these findings in relation to relevant research, it bears resituating research, including: socio-cultural research on the tactical use of home repertoires and funds of knowledge  to address barriers to technical environments [@gutierrez_learning_2019-1; @moje2001maestro @fasso_identity_2020; @esteban-guitart_funds_2014]; the motivations for social making incorporating cultural knowledge of gaming within non-formal making activities [@ito_hanging_2010; @gee_what_2003; @sefton-green_mapping_2013; @livingstone_digital_2018]; the ability to make personalised game assets and narratives and sustain engagement in digital making projects and CGD&P in particular [@sefton-green_mapping_2013 @kafai_constructionist_2015; @resnick_mothers_2012; @papert_mindstorms:_1980][^pbl].
+To start the process of discussing these findings in relation to relevant research, it bears resituating research, including: socio-cultural research on the tactical use of home repertoires and funds of knowledge  to address barriers to technical environments [@gutierrez_learning_2019-1; @moje2001maestro @fasso_identity_2020; @esteban-guitart_funds_2014]; the motivations for social making incorporating cultural knowledge of gaming within non-formal making activities [@ito_hanging_2010; @gee_what_2003; @sefton-green_mapping_2013; @livingstone_digital_2018]; the ability to make personalised game assets and narratives and sustain engagement in digital making projects and CGD&P in particular [@sefton-green_mapping_2013; @kafai_constructionist_2015; @resnick_mothers_2012; @papert_mindstorms:_1980][^pbl].
 
 The contribution of these findings is to locate and address a gap concerning the potential leverage the utility GDPs, and a learning design oriented around that conceptual germ cell, as a mediational strategy to facilitate the incorporation and development of home repertoires into the digital making process [^rep].
 
@@ -836,442 +836,6 @@ On a theoretical plane, this chapter has outlined the evolving use of GDPs as a 
 
 The findings identified a complex object with a diversity of motivation which pose challenges in communicating in simple terms in terms of what characteristics we are designing learning environments to develop. The candidates of proximal flow and computational fluency were explored in relation to existing research and gaps were identified in there coverage of the importance of learner agency and identify formation. In the next chapter characteristics and processes associated with fluency in this chapter are analysed using the lens of agency, in particular that of relational agency.
 
-<!-- In line with Sannino [@sannino_transformative_2022], this study frames such innovation within CHAT as transformational agency, a discussion of which forms a significant part of the following chapter. -->
-
-
-<!-- By way of contrast, Gutiérrez's [@gutierrez_developing_2008] focus on the movement of identity between settings' repertoires of practice draws on the importance of a wider cultural focus of the learning process, or the “cultural mediation of thinking” (Moll, 1998), cited in [@digiacomo_seven_2017] p.44. Gutiérrez sees a role for facilitators to facilitate this via learning design. In this chapter, the last section examining activity on the cultural plane exposed elements of transfer between different activity systems, supporting Gutiérrez's [@gutierrez_developing_2008] perspective regarding the importance of transcending borders and linguistic practices between sites of learning. -->
-
-<!-- Several of the observations in vignettes described above, especially those involving interpersonal guided participation, detail the interweaving of novel concepts and practices with existing repertoires. An example being the use of visual prototyping explored above and in more detail in appendix.prototyping. -->
-
-
-
-<!-- This section synthesises my observations on video data and my own journal reflections on this topic of designing for flow. Flow is a highly subjective experience, and as such, there is a danger that I privilege my own interests in this analysis, and a tendency that I reflect on in the concluding chapter. -->
-
-
-<!-- REMOVE OR MOVE TO LR IF NEEDED.
-Given the disparate nature of the features of designed and emerging pedagogy, it is of value to address ways of conceptualise the overall learning process. While the chaotic directions possible in design evoke a rhizomatic approach to learning [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic], I concur with Biffi et al [ @biffi_chasing_2017-1, p. 972] who identify significant competencies required which are not well-aligned with the age group of this context.  -->
-
-
-<!-- A DESIGN FOR MENTALISTS BY A MENTALIST -->
-
-<!-- Coming back to my motivations as a facilitator and links in the literature of CoL and Papert's Samba school. -->
-<!-- I will cover observations of the characteristics of these emerging design practices, twinned design affordances  and links them with existing  conceptualisation within the literature.  -->
-
-
-
-  <!-- - flexibility in design stage, jumping about in design cycles, rapidly responding to Feedback
-  - Varied forms of identity incorporation via division of labour, and making styles via incorporation of funds of knowledge, home interests
-  - via choice of patterns in the MENU
-  - But restrictions on the genre and the template   -->
-
-
-<!-- These practices includes emerging norms, DoL, and community behaviour. -->
-
-<!-- MOVE TO CHAP 3?
-As explored in the literature review design stages as a conceptual design tool is common in CS education, e.g. Resnick's creative learning spiral [@resnick_all_2007, p. 2]. In data analysis I created a coding theme based on a design cycle framework: Ask / Imagine, Plan, Create, Test, Improve, Share. When coding I observed that naturalistic practice rarely matched the progression of the design cycle.  -->
-
-
-<!-- **Observations and evidence on flexible design stages** -->
-
-
-
-
-<!-- This concern is echoed in research which critiques a similar, staged approach to creative writing in primary education using a writing cycle approach.   -->
-
-<!-- REFLECTION HERE - REFLECTION WITHIN A ROLE OR WITHIN PLAYTESTING.
-sTUDENT HELPERS - SEE END - OR VIGNETTE ON REFLECTION
- -->
-<!-- **Varied forms of incorporation of external repertoires** -->
-<!-- **Tension between choice and restrictions** -->
-
-
-
-
-<!-- One potentially fruitful perspective is that of rhizomatic design approaches [@de_freitas_classroom_2012]. Research exists on the promise of rhizomatic approaches design thinking in creative educational programmes [@biffi_chasing_2017-1]. However researchers identify significant competencies required including to "identify and synthesize the body of technical and even complex knowledge into a feasible structure" [@biffi_chasing_2017-1, p. 972], which are not well-aligned with the age group of this context. -->
-
-<!-- This concern is echoed in research which critiques a similar, staged approach to creative writing in primary education using a writing cycle approach.   -->
-
-<!-- There are disparate resources available for game jams but due to the adult centric audience and mix of abilities they are less guided in nature than many supported design processes aimed at school age audiences. -->
-
-<!-- Within the concept of jamming, activity which is casual seemingly non-productive can still tran. I suggest that such _jamming_ can be facilitatedsmit useful information to guide collaborative practices. As per above and examples in Appedix ? Find. -->
-
-<!-- This section discusses some of the outcomes stemming from interventions and emergent participant responses in the area of peer and individual working practices. -->
-
-<!-- In Chapter 5, one of area of contractions was the dysfunctional group work which was freed up by allowing greater atomisation and greater scaffolding of tool use. -->
-
-<!-- Some barriers stemming from alienation from participant group working processes were resolved partly by freeing up some patterns of collaboration and interaction and removing others.
-
-The process of parents getting in the way of children's not minding jumping in and invading social space struck me. Together with the frustrations of complexities of larger group work the restrictions created a tension between the suggested community norm of how division of labour was organised.
-
-Thus in P2, rather than the larger groups of P1, smaller groups, allowing some children to work by themselves and others with parents. Avoiding large group fragmentation and encouraging freedom of participation vs benefiting from parental involvement.
-
-There is a flexibility here which is encouraged by informal moments of  playtesting
-
-These tensions are mirrored in similar research and were highlighted in the practitioner interviews that I conducted.
- -->
-
-<!-- DROP THIS - NOT CLEAR IF NOT REALLY PROPOSED AS A NAVIGATIONAL STRATEGY FOR YOUNG PEOPLE.
-In a closer review of key literature claims of of the value for participants of following design cycles are implied but not supported. Instead stages is are proposed as a tool to "discusses strategies for designing new technologies" [@resnick_all_2007, p. 2]. The following writing discusses the value of flexible approach to design processes observed in my research. -->
-
-
-<!-- ### Returning to the table of varied GDP use with supporting evidence
-
-The introduction introduced the summary table. I now return with a greater focus on the scope of the claims of this research, implications for facilitators and how the findings link to the contents of the following chapter. -->
-
-<!-- Instead the potential of this learning design is of most value.   -->
-
-
-
-
-
-<!-- While the design processes directly linked to implementing GDPs were among the most significant in the video data, others were present. -->
-<!-- DROP
-In the following section I briefly explore some facilitator introduced community interactions as a way to prepare for a discussion in relation to the development of agency in the following chapter -->
-
-
-
-
-<!-- NOTE -  REFRAMING WITH A FOCUS ON AGENCY - IDEALLY THE LATER -->
-<!-- Using a choice of patterns when compared to instructional tutorials (previously explored in methods chapter)  -->
-
-<!-- For exa In the language of double stimulation, a tension of relative inactivity at times is overcome by invitations to playtest and resulting interaction. -->
-
-<!-- ### Link Paragraph to next chapter
-
-A theme to follow up in the Maps / personal learning chapter is that of picking up on some of the behaviour of participants, especially that of experienced parents, experience either in coding practices of supporting their children. Once identified, how could beneficial interactions be encouraged in the next iteration of design.
-
-Examples include;
-- supporting reflection on design and coding concepts / skills.
-- navigation / organisational support - use of a physical map.
-
-For example, the use of CT concepts in a framework, listed as part of the initial design pattern card, which 17th Jan 2025 - Supervisions Notescould then be discussed, ticked off or otherwise reflected on. -->
-
-
-
-
-
-<!-- This is done in several ways?
-
--  as participation which can involved into repertoires of practice [@lecusay_telementoring_2015; @gutierrez_learning_2019-1]. -->
-
-
-
-<!-- The observations of this chapter show the advantages of GDP as an  relatable design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers.  -->
-
-
-
-<!-- Participants are able to use the affordances of the existing learning design and add their own evolving practice to them as a way of expressing and building agency. -->
-
-<!-- **Practical** -->
-
- <!-- GDPs functioned as an _inspirational structured design tool_ . -->
-
-<!-- The observations of this chapter show the advantages of GDP as an intermediate, relatable design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers.  -->
-
-
-
-<!-- The use of GDP concepts can create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate communication, sustaining engagement, planning and division of labour.  -->
-
-
-
-
-<!-- **What are the limits of the claims of this research?** It is important to recall the purpose and limitation of these figures outlined in Chapter 4, that this is not designed to claim efficacy of the learning design or to be representative of an average participant (which would require follow up studies of different design). -->
-
-
-<!-- NEXT CHAPTER?  The utility of a patterns and their collection as a form _intermediate-level knowledge_ by both researchers and participants  is shown in part by in a growing sense of mastery towards technical processes becoming second nature and the resulting ability to share them with family and other peer groups. -->
-
-<!-- **Theoretical** -->
-
-
-<!-- While the development of agency has not been the primary focus of this chapter, the processes of community adaptation of GDP use can be directly linked to conceptions of transformative agency explored in Chapter 4. The next chapter explores cultural aspects in greater detail continuing to explore emergent agency in this research. -->
-
-<!-- **Transition to next chapter on agency** -->
-
-<!-- Examples of this dynamic agency include the use of graphical code structures, asking for peer or facilitator support etc. -->
-<!-- While the process of direction may be less totally learner-driven approach than the first iteration of the learning design P1, working with a starting menu of game patterns with support still provides challenges to learners and complexity of working processes. Design blockages still occur, and participants have to work with facilitators in depth to overcome issues. There is the possibility to adapt existing patterns, to add new patterns from outside the curated collection or to shift to new game paradigm requiring a different set of patterns altogether. -->
-
-
-
-<!-- THIS PERHAPS IS FOR CONCLUSION? This can be understood in relation to relevant socio cultural theory in the following way, affordences, mutual tool development, FoI, etc. -->
-
-
-
-<!-- An alternative take [@perrenet_exploring_nodate-1] looks at abstraction as...
-"Abstraction level as a reflection of the so-called processobject duality" -->
-<!-- LINK
-The process of abstraction is present in a tacit way in the process of actions becoming operations. -->
-
-
-<!-- In addition, the use of code playground abstracts away complexities of a development environment, and the immediacy of feedback facilitates  fluid and rapid interchange between the code view and resulting web output. -->
-<!--
-See notes here
-https://docs.google.com/document/d/1my3iDjivq64gdcXsmwqKVP0QJMDvfBN3MsD0FoeI4Qs/edit -->
-
-<!-- In this context of novice coders in an informal environment it seems appropriate to introduce some levels of reusable practice whilst initially prioritising individual learner engagement and community participation. -->
-<!-- Game design patterns contain elements of more abstract and thus repeatable structures thus fulfilling some of the promise transfer offered by advocates of Computational Thinking. This is explored in more depth in the next chapter. -->
-
-
-<!-- ### Use of GDP as communication short cuts (SYNTHESIS)
- **Discussing Game design patterns as a tool to expose and give participants a language to discuss and resolve tensions (Practitioner focus)**
-
- This section;
- - synthesises examples which highlight the value of developing share language and short cuts
- - explores possible drawbacks
- - looks at restricted
-
- Examples of short cuts include, "get an enemy in", animate player from Ed and Ma's exerpts.
-
- The advantages of such shortcuts are, as discussed to help with the prioritisation and ideation processes, to facilitate peer propagation of ideas, and potentially to inform debugging and improvements to increase game playability.
-
- However, there are challenges of the use of such short cuts including;
- - hiding more complex patterns within the name.
- - confusion over use of terms to new comers
-
- For example the shortcut of a name for a pattern in Ed and Ma's interaction hides a large amount of problems solving which seems "overwhelming" -->
-
-<!-- ### Call back to design practices
-As per last chapter but develop in relation to GDPs -->
-<!-- However from the novice designers' perspective, there are elements of patterns involved. -->
-<!--
-**Exploring the grokkable nature of GDPs**
-
- GDPs if well designed can be accessible in this grokkable way.
-The term grok is used here to indicate an embodied, intuitive understanding that mirrors the concept of deep learning. https://en.wikipedia.org/wiki/Grok
-
-Repeated practice is an important part of this process.
-Other examples of grokking concepts? -->
-
-<!--
-## Disregarded or Next Steps Data
-
-We can also compare the patterns and also the frequency of these interactions with a future session later in the year. COULD DO BUT SIDELINE FOR NOW - ADD TO NEXT STAGES? -->
-
-<!--
-rejected notes
-- How does this approach compare to PBL -
-- How are roles similar or different from Barron -
-- Design processes -->
-<!--
-## Future Work / Omissions
-
-- Further testing of the Maps   -->
-
-
-## MOVED FROM INTRODUCTION
-
-
-<!-- In interpreting the results of this chapter it is of value to explore experiences of participant agency in a way which reflects the mutual development of this design. Thus the intersection of the participant agency and use of GDPs both as introduced and adopted processes will be examined in this chapter. -->
-
-<!-- MOVE TO PERSONAL However, despite the value of a micro approach which includes close analysis of implementation of code structures. -->
-
-<!-- The focus on GDP as unit of analysis is supported in the following observations;
-
-- the frequency of GDP language referring to patterns used by pairs in particular in the process of collaborating on their games
-- Through observation of GDPs as a germ-cell being used at different phases / scope of the learning design as it evolved.
--->
-
-<!-- The previous chapter explores how I developed these requests into a set of code examples, instruction tutorials, quick start activities which proposed micro level code modification. While these approaches are  distinct in their pedagogical use, they stemmed from the same germ-cell activity of altering the game through transforming GDPs. -->
-
-
-<!-- In addition the following aspects of the use of GDPs merit attention in this chapter:
-
-NOTE CHECK THESE WITH THE DISCUSSION CONCLUSION.
-
-- the value of completing something concrete a sense of sustaining achievement.
-
-<!-- #### On GDPs as a concept to help analysis -->
-<!-- MOVE TO METHODOLOGY - JUST GET ON WITH IT?
-Blunden cites the process of identifying a germ cell of activity as a fruitful process for researchers [FIND]. In addition, Engestrom frames expansive learning as instructive for organisational change. While research is more sparse in the field of educational practice, the principles are frequently applied to classroom practice. -->
-<!-- My decision to privilege the implementation of each GDP as the main objective  activity system mirrors choices by other researchers valuing  -->
-
-<!-- CHECK AGAINST METHODOLOGY
-tie in conceptts of
-- leading activity
-- repeated activity / iteration
-- rising to the concrete - ie different forms of activity.  -->
-
-
-<!-- MOVED EARLIER HERE - Check it fits? In the literature review and methodology chapter we examined different interpretations of agency used by researchers using activity theory [@hopwood_agency_2022].  -->
-
-<!-- DROP? We can ask where does knowledge of GDPs in participant come from. Good games communicate their affordances, (in the form of GDPs) to the player without the need for extensive additional documentation [@gee_learning_2005]. This process also communicates GDPs implicitly to players, a process borne out by brainstorming sessions early in the process which say participants listing GDPs or variants of them without explicit guidance in this direction. This  goal setting and implementation using GDP as a base developed into a principle activity of P1 with varied results. -->
-
-<!-- In addition to support their identification of the different elements that make up a game I created a sheet which drew on existing work framework (mechanics, space, goals, etc) to scaffold the process. -->
-
-<!-- This study activity covers a wide spectrum of activity, in other chapters,  design stages involving discussion, planning, implementation and playtesting after each new game element. -->
-<!-- THERE IS OVERLAP HERE WITH THE LAST CHAPTER - HOW TO REMOVE THAT AND RETAIN CLARITY ?
-
-Thus in this study activity covers a full spectrum including close analysis of implementation of code structures. However these smaller operations are not worthy of being treated as an activity system in full. WHY MAKE THIS POINT. wHAT IS THE OVERALL MOTIVATION HERE?  -->
-
-<!--
-#### On GDPs as a germ concept to help practical development -->
-
-<!-- NOTE - removed -  what is the germ cell of the overall game making activity. -->
-
-<!-- around, game mechanics, game space, game polish and game challenges. -->
-
-<!-- LATER?
-
-AT provides a concept of rising to the concrete which invites analysis of how the construct of  GDPs can be be adapted to serve the development of a game making community at different scopes of activity. To illustrate this concept we can use Marx's concept of exchange as a germ-cell for analysis of capitalism.  -->
-<!-- The previous chapter described the  key elements of the learning design that were in place by P2 ( remixing from a game template, use of distributed asset creation showcasing and social playtesting).  The shared tools and documentations began to shape goal setting around implementing new features, some where held in common with other groups. -->
-
-### MOVED FROM GUIDED PARTICIPATION
-
-<!-- Patterns and the multiple actions and operations they entail are referred to briefly using short cut names.   -->
-
-
-<!-- Discussion later or before??? Maps -
-GDP are already being used as a way to set goals, track progress and prioritise but the process seems stressful or unsatisfactory. Some kind of support help scaffold this process would be potentially productive. Changes to the emerging 3M design to provide such support are explored in the following chapter. -->
-
-
-<!--
-We can compare this drawn out process with a more rapid prioritisation guided by a parent with more experience in software development. Toby and Dan  are discussing possible features early in the process if ideation.
-
-They thinking of a feature – wrap around like Pac-man
-Dave  – Yeah we can do that. Save that for version 1.1
--->
-
-<!-- This pattern completion is mirrored in the work of other pairs. Thus replicating is a kind of participation in an emerging community.
-There is also a link made by the parent to previous working practices. Using a paper book to make a sketch of the work to be completed. -->
-<!-- These kinds of shifts of activity and cultural practices brought by the participants also feed into the ongoing culture of the game making community. For example the use of paper designs and paper prototyping that for some of the home ed families was a familiar practice was something that I adopted more broadly after observing the families involved. -->
-
-MOVED FROM DISCUSSION
-**A tension in use of norming practices and participant choice?**
-
-<!-- MOVE THIS TO NEXT CHAPTER DISCUSSION?
-However, as a seeming counterpoint to this growing agency is the norming effects of concepts that gain community currency in playtesting. The repeated attempts by participants to make the jumping mechanic of Madiha less frustrating can be seen as a potential drag on the agency or autonomy of Madiha as a designer. However this may be a false dichotomy. Such norming practices can be seen from a different perspective according to Rogoff, as a productive nudge to get real.
- IS THIS EXPLORED IN THE NEXT CHAPTER? -->
-
-### Future work on abstraction, layers of abstraction GDPs and the MDA framework
-
-**Move to conclusion or appendix? - appendix for now?**
-
-Levels of abstraction and shifting perspectives also exist in formal analysis of game design frameworks [Salen, and MDA].
-In the theoretical underpinning, Aesthetics are the first experience of the user, and the designer most closely aligned with mechanics. Could awareness of this their shifts in perspective in relation to this MDA framework be helpful to novices.
-
-Could link between the MDA framework and main areas of GDPs can be used to deepen a possibly profitable connection to professional design lenses theory practices?
-
-This learning design could be a good base to use to answer those questions.
-
-
-## MOVE FROM cH 7 - ANY SPACE HERE?
-
-## Impact of Side Missions and Maker Types on playtesting behaviours
-
-
-#### Reflection on impact on my design process
-
-<!-- Thus my role as a responsive facilitator rather than a instructor was key to this process.  -->
-<!-- opens up flexibility in the way learners approach the design processes. -->
-<!-- imagined, often in response to community need, by myself, the following emerged from community use. -->
-START WITH A NARRATIVE?
-My role as a learning designer under went some significant evolution.
-As an example the quick start activities created by PGCE students were much more directive than I initially proposed in P1. It is not that the structuring was antithetical to my approach, more that the area was unfamiliar in terms of common heuristics, and the interweaving of gameplay features and underlying code structures.
-
-Observations of and reflections on playtesting in p2, showed that participants still engendered a diversity of experience, from these shared beginnings.
-
-An additional reflection on design is that the playtesting of participants revealed evidence of different motivations driving activity in game making sessions.
-
-
-
-### Limitations of observations and careful statements of potential
-
-It is important to highlight several aspects of the limitation of the exploration of maker types and side missions designed to support them.
-
-This work is limited, as are other observations by the limited number of participants,. It is also perhaps guided by my own motivations as a researcher to investigate more messy approaches to learning.
-
-However, given the potential of my observations and the link with existing research in other domains. It is reasonable to propose the processes outlines as a potentially fruitful area for further research. I explore potential dimensions of that research in the concluding chapter.
-
-MoE being one of those directions.
-
-
-
-
-<!-- In early stages the mutual work to produce resources, techniques and practices to share and evaluate these shared elements became a primary focus of my work, just as the implementation of game elements was the focus of the work of participants. -->
-
-<!--
-MOVE TO CHAPTER 7
-
-In appendix 5.playertypes, I outline the use of a game to explore different game playing types. I then proposed different making types. I used the question "What kind of game maker are you?" as an indicator to participants that one aim of the project was to create a space where different approaches are possible and celebrated.
-
-![Illustration 4.x - What kind of game maker are you  ](./Pictures/kindofgamemaker.png){width=95%}
-
-To communicate this approach, as well as starting game activity, I incorporated the question into an animation of the resources home page (see illustration 4.x). In P3 the underlying ideas were incorporated into the process drama described in the next section.
- -->
-
-<!-- MOVE THIS CLAIM LATER.
-**Claim:** The data in this chapter shows the value and further potential of mixing the more mature techniques of MoE and other process drama techniques with the ethos of game jams. -->
-
-
-### Emerging use of narratives and graphics which drawing on home funds of knowledge  - AVOID OVERLAP AND CHANGE FOCUS TO AGENCY FROM START
-
-NOT REALLY ONLY TO DO WITH PLAYTESTING.
-
-RECAP WHAT HAS ALREADY BEEN EXPLORED,
-In the previous chapter,
-
-
-
-**While the potential to add graphics was a core affordence of the starting processes of the templated game, the process of designing and sharing and the peer commentary on the process emergered as the sessions evolved.**
-
-The literature review outlined the potential of home interests as funds of knowledge, especially informal learning. This learning design provided participants with different ways to input and explore their home interests in the narrative and graphical elements of their created games. For example the choice of game characters allowed the expression of identity. Other designed elements for example audio and graphical effects or written messages added to the overall aesthetic or polish of the game.
-
-Video evidence indicated that conflicts involved between learner expectations and their technical abilities are helped by the use of the starting template. The
-constraints of provided game elements and implied narrative structure of the template accelerated the initial creative process.
-
-
-
-
-
-In another example, Mark and Ed designed a game around the character of a train driver that needed to collect coal. In subsequent post course interview Mark describes the impact of the child feeling like they could bring their own identity and interest into the project. "I know just your eyes lit up when you realised you could expand your interests into gaming." See Appendix 4.x (Mark and Ed working with home interests)
-
-
-
-<!-- The incorporation of the graphic was relatively quick and easy change to make the game but had a significant factor in the affect towards the game [erikssonUsingGameplayDesign2019;] BRING ON OTHER LITERATURE HERE ON PERSONAL EXPRESSION, FUNDS OF KNOWLEDGE IN THIS AREA. Roque, Scratch, Kafai, Gee etc. -->
-
-<!-- Ideally look for evidence of sharing in communities, especially developing processes, avoiding traps which sap momentum, -->
-
-<!-- While these aspects are covered in other literature, and are therefore not covered in depth in this chapter, it is important to include their strong presense in the data of study. And to situate them in relation to other chapter contents. HOW EXACTLY. -->
-
-
-
-#### MOVE LATER/ JUST A SIGNPOST TO LATER - PARK, FOR NOW?
-
-**It is of value to create spaces to leverage the potential of in-between moments for participants - playtesting or non-productive**
-
-<!--
-Note Dropped Faff time.  -->
-<!-- SO IS THIS IN RELATION TO CHALLENGING DESIGN STAGE PARAGDIM
-I noted in analysis of data that along with frustration there are also moments of creativity, and there are bonding moments which appear to be helped by this activity which is at times quite unfocused but also shared.  -->
-
-The process of swapping graphical assets used a shared Piskel gallery and games area which served to keep individuals informed in directly of progress being made, and to spark curiosity in the creations of others.
-
-In addition, I observed that navigating these essential but non-creative tasks in a collaborative and playful way can reduce learner anxiety and help maintain a positive affect to the overall creative digital process. This observation is supported by an example in the next chapter available in appendix 5.x - an extract of which is included below.
-
-
-In summary, it is of value to create spaces to leverage the potential of these in-between moments for participants.
-ALSO TRUE OF PLAYTESTING
-
-The potential impact on agency is as follows; If these tasks can be seen as more than mere barriers to production, and therefore to be designed out to increase instrumental agency, then there is potential to increase relational agency through flexible divisions of labour that allow the incorporation of home roles in to this new learning space. Thus a potential affordance to find identify and specialism here.
-
-
-### Implications for practitioners - MOVE LATER?
-<!--
-RETURNING TO WHAT IS FOUND IN THE DATA - A CELEBRATION OF THE CONCRETE - AND UTITILY OF THE MID - LEVEL APPROACH -->
-
-Returning to issues of inclusive approaches to pedagogy, the findings of this chapter resonates with Papert and Turkle's celebration of the process of concrete tinkering. They also suggest that it is potentially augmented, in terms of wider accessibility, with the use of design patterns as a germ cell concept. This approach is flexible and potentially responsive whilst still retaining a unifying pedagogical approach.
-
-In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in goals between activity systems and navigation between one sub-goal and the next. Any other analysis on the part of the participant can wait until the process becomes more familiar.
-
-This approach is aligned to inductive research processes. Finding useful abstractions only after immersing ones-self in the detail. Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation.
-
-
-## Recently Dropped from chapter.
-
-<!-- DROP ALL OF THIS?
-While much research on teaching coding addresses the benefits of collaborative approaches (see Chapter 2), fewer studies outline strategies to facilitate joint attention [@brennan_scratch-ed_2009]. Thus, it potentially fruitful to align relevant uses of GDPs to existing research on the development of shared language to support joint work and guided participation [@stahl_computer-supported_2006].
-
-
-Returning to Kynigos's interpretation of the half-baked game as a boundary object facilitating communication [@kynigos_half-baked_2007], we GDP concept themselves can also been seen a _boundary objects_ at a greater level of granularity. The work of Stahl and others [@stahl_computer-supported_2006] within the fields of technology use and collaborative learning is relevant here to highlight the importance of language development and the intersubjective interpretation of visual prototypes and gestures as tools in building mutual understanding in the kind of _joint problem space_ we see in this study.    -->
 
 ## Footnotes
 
