updates on methodology chapter

--- a/_posts/thesis_chapters/tocs/2025-6-6-Gdps_v5.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-6-6-Gdps_v5.md_toc.md
@@ -1,7 +1,7 @@
 -   [Findings: Game Design Patterns](#findings-game-design-patterns)
     -   [Introduction](#introduction)
-        -   [Framing GDPs within activity theory
-            concepts](#framing-gdps-within-activity-theory-concepts)
+        -   [Framing GDPs within activity theory concepts (Is this even
+            needed?)](#framing-gdps-within-activity-theory-concepts-is-this-even-needed)
     -   [The role of GDPs in the personal appropriation of concepts and
         processes](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes)
         -   [The interrelationship of GDPs and the development of
@@ -21,10 +21,11 @@
         activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
         -   [The role of GDPs to facilitate learners to design for
             others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
-        -   [GDPs can facilitate the use of wider funds of knowledge and
-            interest](#gdps-can-facilitate-the-use-of-wider-funds-of-knowledge-and-interest)
-        -   [The propagation and evolution of GDPs
-            concepts](#the-propagation-and-evolution-of-gdps-concepts)
+        -   [The cultural propagation and evolution of GDPs
+            concepts](#the-cultural-propagation-and-evolution-of-gdps-concepts)
+        -   [GDPs can facilitate the use of wider repertoires of
+            practice, interest and funds of
+            knowledge](#gdps-can-facilitate-the-use-of-wider-repertoires-of-practice-interest-and-funds-of-knowledge)
     -   [Discussion](#discussion)
         -   [Addressing the use of GDPs in relation to understanding
             representing the processes of mediation
@@ -32,28 +33,4 @@
         -   [Expanded object in terms of motivation - fluency towards
             agency](#expanded-object-in-terms-of-motivation---fluency-towards-agency)
     -   [Conclusion](#conclusion)
-    -   [MOVED FROM INTRODUCTION](#moved-from-introduction)
-        -   [MOVED FROM GUIDED
-            PARTICIPATION](#moved-from-guided-participation)
-        -   [Future work on abstraction, layers of abstraction GDPs and
-            the MDA
-            framework](#future-work-on-abstraction-layers-of-abstraction-gdps-and-the-mda-framework)
-    -   [MOVE FROM cH 7 - ANY SPACE
-        HERE?](#move-from-ch-7---any-space-here)
-    -   [Impact of Side Missions and Maker Types on playtesting
-        behaviours](#impact-of-side-missions-and-maker-types-on-playtesting-behaviours)
-        -   [Reflection on impact on my design
-            process](#reflection-on-impact-on-my-design-process)
-        -   [Limitations of observations and careful statements of
-            potential](#limitations-of-observations-and-careful-statements-of-potential)
-        -   [Emerging use of narratives and graphics which drawing on
-            home funds of knowledge - AVOID OVERLAP AND CHANGE FOCUS TO
-            AGENCY FROM
-            START](#emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge---avoid-overlap-and-change-focus-to-agency-from-start)
-            -   [MOVE LATER/ JUST A SIGNPOST TO LATER - PARK, FOR
-                NOW?](#move-later-just-a-signpost-to-later---park-for-now)
-        -   [Implications for practitioners - MOVE
-            LATER?](#implications-for-practitioners---move-later)
-    -   [Recently Dropped from
-        chapter.](#recently-dropped-from-chapter.)
     -   [Footnotes](#footnotes)
